--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,3 +13,34 @@ jobs:
       - name: Vet
         run: |
           go vet ./...
+  deploy:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.2
+
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3.12.0
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3.7.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.10.0
+        with:
+          images: err0x01/hello-golang
+
+      - name: Build and push Docker Image
+        uses: docker/build-push-action@v6.18.0
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
